* unit test: Add support for the Chrome browser in jstest.rb. [Andrew Dupont]

* Refactor Element#setOpacity to refine browser sniffs and move forked versions closer together. [jddalton]

* Refactor Element#update to remove browser sniffs. [jddalton]

* Optimize Element#(insert|update|replace) using a document fragment. [jddalton]

* Refactor Element#replace to remove browser sniffs. [jddalton]

* Fix IE issue with Element#replace removing childNodes of the returned element. Closes #11225. [Rukawa, jddalton]

* Refactor the Element constructor to remove browser sniffs. [jddalton]

* Ensure setting type attribute for button/input elements works in IE when using the Element constructor. Closes #10548. [jddalton, sakarit]

* Ensure Element#getStyle returns values in px unit, regardless of how they are set. [Andrew Dupont, jddalton]

* Refactor Element#getStyle to remove browser sniffs and move forked versions closer together in the code. [jddalton]

* Make Element._attributeTranslations.read.values._getEv only return a value for code wrapped in an anonymous function. [#184 state:resolved] [Garrett Smith, jddalton]

* Stop window "onload" observers from firing before the "dom:loaded" observers.
  Enforce first-in-first-out observer execution order if the browser doesn't. Closes #9394. [jddalton, Samuel Lebeau]

* Optimized Event observe/stopObserving and consolidated closures in event.js. [jddalton]

* Ensure all stylesheets have loaded before firing dom:loaded event. [#328 state:resolved] [Diego Perini, jddalton, zichzach]

* Implement Diego Perini's "doScroll" technique for DOMContentLoaded event support in IE. [Diego Perini, jddalton]

* unit test: Added ability to append the query param delay=n to any resource URI to delay its loading by "n" seconds. [jddalton]

* Add Event#getEventID to fix issues with event IDs on elements created by Element#cloneNode. [jddalton]
